--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "codoc",
   "version": "1.0.0",
   "description": "Copilot-enabled action for suggesting documentation changes on a PR",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "rollup": "rollup --config rollup.config.js"
+    "rollup": "rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript"
   },
   "repository": {
     "type": "git",
@@ -26,6 +24,9 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^29.0.0",
     "@rollup/plugin-node-resolve": "^16.0.3",
-    "rollup": "^4.53.1"
+    "@rollup/plugin-typescript": "^12.3.0",
+    "rollup": "^4.53.1",
+    "tslib": "^2.8.1",
+    "typescript": "^5.9.3"
   }
 }
