--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "codoc",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Copilot-enabled action for suggesting documentation changes on a PR",
   "scripts": {
     "rollup": "rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript"
@@ -19,12 +19,14 @@
   "homepage": "https://github.com/TylerKoon/codoc#readme",
   "dependencies": {
     "@actions/core": "^1.11.1",
-    "@actions/github": "^6.0.1"
+    "@actions/github": "^6.0.1",
+    "openai": "^5.11.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^29.0.0",
     "@rollup/plugin-node-resolve": "^16.0.3",
     "@rollup/plugin-typescript": "^12.3.0",
+    "@types/node": "^24.10.0",
     "rollup": "^4.53.1",
     "tslib": "^2.8.1",
     "typescript": "^5.9.3"
