--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,15 +4,36 @@ on:
       - main
 
 jobs:
-  hello_world_job:
-    name: A job to say hello
+  codoc:
+    name: Codoc
     runs-on: ubuntu-latest
+    if: github.event.pull_request.draft == false
 
     steps:
-      - name: Hello world action step
-        id: inference
-        uses: tylerkoon/codoc@v0.0.3
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
-      # Use the output from the `hello` step
-      - name: Get the output time
+
+      - name: Build prompt input
+        id: build_prompt
+        run: |
+          echo "List the documentation files that exist in the target branch of this PR, and determine if it needs to be updated based on the following pull request diff:" > prompt_input.txt
+          git fetch origin ${{ github.event.pull_request.base.ref }}
+          git diff origin/${{ github.event.pull_request.base.ref }}...HEAD >> prompt_input.txt
+          echo "::notice file=pr_diff.txt::Prompt input generated"
+      
+      - name: Assess documentation state
+        id: inference
+        uses: actions/ai-inference@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          model: gpt-4o
+          system-prompt: |
+            You are Codoc, an AI tool that runs in a GitHub Action whose main purpose is to help keep documentation up to date within a repository. You will be provided with a diff of code changes in a pull request. Your task is to analyze the changes and determine if any documentation files (e.g., README.md, docs/) need to be updated to reflect the new code changes. If updates are needed, you will simply tell the user that the documentation should be updated and give a brief justification. You **will not** provide suggestions unless specifically asked.
+          prompt-file: ./prompt_input.txt
+  
+      - name: Print Output
+        id: output
         run: echo "${{ steps.inference.outputs.response }}"
